# NCT-Dispatcher

./: .env.prod  .gitignore  README.md  dispatcher.sqlite  docker-compose.yaml  requirements.txt
dispatcher_api/: .env.prod  Dockerfile  pyproject.toml  requirements.txt
dispatcher_api/app/: __main__.py  settings.py
dispatcher_api/app/bot_tele/: __init__.py  bot_callback_class.py  bot_commands_class.py  bot_main.py  bot_parser.py  bot_requests.py  bot_settings.py  reply_markup.py
dispatcher_api/app/bot_tele/bot_dataclasses/: bot_message.py  callbacks_dataclasses.py  utility.py
dispatcher_api/app/bot_tele/middleware/: middleware_abstract.py  middleware_admin_chat.py  middleware_main.py
dispatcher_api/app/core/: __init__.py  auth.py  client_makers.py  code_gen.py  filemanage.py  trash.py
dispatcher_api/app/core/debug/: __init__.py  classes.py  debug_dataclass.py  debug_utility.py
dispatcher_api/app/core/requests_makers/: __init__.py  asyncio.py  response.py  (+3 more)
dispatcher_api/app/database/: __init__.py  database.py  session.py  utils.py
dispatcher_api/app/dependencies/: __init__.py  app.py  auth.py  pagination.py  session.py
dispatcher_api/app/depends/: __init__.py  app.py  auth.py  pagination.py  session.py
dispatcher_api/app/routers/: __init__.py  misc_models.py
dispatcher_api/tests/: conftest.py  misc.py  test_db_utils.py
dispatcher_api/tests/test_api/: test_apps.py  test_auth.py  test_incidents.py
dispatcher_api/tests/test_core/: test_auth.py  test_single.py  test_trash.py
dispatcher_api/tests/test_db/: test_app.py  test_incident.py  test_user.py
(+147 files in other folders)
