[project]
name = "nct-dispatcher"
version = "0.2.0"
description = "NCT servises dispatcher for apps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.0",
    "fastapi>=0.124.0",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pip-system-certs>=5.3",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
